2007-08-21  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #468734

	* em-mailer-prefs.c: (label_color_set): color-set signal has no rgba
	passed.

2007-08-20  Matthew Barnes  <mbarnes@redhat.com>

	* mail-component.c (enable_folder_tree):
	Alternate fix for bug #467599 (also bug #467883).

2007-08-20  Tobias Mueller  <tobiasmue@svn.gnome.org>

	** Fix for bug #467382

	* em-folder-browser.c: Changing position of emfb_enable_map to 
	be able to compile with -pedantic

2007-08-20  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #367760

	* em-utils.c: (em_filename_make_safe): Added '#' as non-safe character.
	* em-utils.c: (em_utils_save_part): Using em_filename_make_safe and
	creates filename similar to em_utils_save_parts.
	* em-utils.c: (em_utils_save_parts): Using em_filename_make_safe.

2007-08-20  Johnny Jacob  <jjohnny@novell.com>

	** Fix for bug #467599.
		
	* mail-component.c: (enable_folder_tree): No need to emit a
	folder_selected signal when no folder is selected. Plugged a
	memory leak.
			
2007-08-20  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #467165

	* em-folder-tree.c: (emft_tree_user_event): If the event is null, it
	may be a keyboard event. 

2007-08-16  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #350539

	* em-format-quote.c: (emfq_format_headers), (emfq_text_plain):
	* em-format.c: (emf_multipart_alternative), (emf_inlinepgp_signed):
	* em-popup.c: (emp_part_popup_set_background):
	* em-format-html.c: (efh_text_plain), (efh_message_external),
	(efh_format_headers):
	Ensures non-NULL part.

2007-08-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #467198

	* mail-component.c: (enable_folder_tree): Initialize the camel
	exception.

2007-08-16  Johnny Jacob  <jjohnny@novell.com>

	** Fix for #364431.
	
	* em-subscribe-editor.c : (sub_editor_refresh) : Wait for thread
	to finish before refreshing.
	
2007-08-16  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #466548
